[package]
name = "tokio-diesel"
version = "0.4.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"
description = "Integrate Diesel into Tokio cleanly and efficiently."
repository = "https://github.com/mehcode/tokio-diesel"
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

[dependencies.diesel]
version = "2"
git = "https://github.com/diesel-rs/diesel.git"
branch = "master"
default-features = false
features = ["r2d2"]

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1", default-features = false, features = ["full"] }

[dev-dependencies.diesel]
version = "2"
git = "https://github.com/diesel-rs/diesel.git"
branch = "master"
default-features = false
features = ["postgres", "uuid"]
